# cursed-organ

./: README.md  diagram.json  pyproject.toml
src/: main.py
src/app/: __init__.py
src/data/: C4-scale.mid  example.txt
