[tool.poetry]
name = "cursed-organ"
version = "0.1.0"
description = ""
authors = ["IanLondon <ianlondondu@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
micropython-rp2-pico-w-stubs = "^1.20.0.post5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
